fix: Veraltete URL-Konstruktoren aktualisiert
Detaillierte Erklärung
- URL-Konstruktoren in BinaryIn.java, In.java, GrayscalePicture.java und Picture.java durch URI.create() ersetzt
- Nicht mehr erreichbare URISyntaxException catch-Blöcke entfernt und durch IllegalArgumentException ersetzt
- Warnungen bezüglich veralteter Konstruktoren seit Java 20 behoben